--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "time.h": "c"
+        "time.h": "c",
+        "*.ppm": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
