--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "C/C++: bld&dbg",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/${fileBasenameNoExtension}.exe",
+			"program": "${workspaceFolder}/src/${fileBasenameNoExtension}.exe",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
