--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "time.h": "c",
-        "*.ppm": "c"
+        "*.ppm": "c",
     },
-    "C_Cpp.errorSquiggles": "Disabled"
 }
