Refactor C/C++ file associations and add drawSky function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
     "files.associations": {
         "*.ppm": "c",
     },
+    "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+        "clang-diagnostic-error"
+    ],
 }
